v8/en/07_MySQL_Programs/06_Administrative_and_Utility_Programs/08_mysql_migrate_keyring_—_Keyring_Key_Migration_Utility.md
### 6.6.8 mysql\_migrate\_keyring — Keyring Key Migration Utility

The [**mysql\_migrate\_keyring**](mysql-migrate-keyring.html "6.6.8 mysql_migrate_keyring — Keyring Key Migration Utility") utility migrates
keys between one keyring component and another. It supports
offline and online migrations.

Invoke [**mysql\_migrate\_keyring**](mysql-migrate-keyring.html "6.6.8 mysql_migrate_keyring — Keyring Key Migration Utility") like this (enter
the command on a single line):

```
mysql_migrate_keyring
  --component-dir=dir_name
  --source-keyring=name
  --destination-keyring=name
  [other options]
```

For information about key migrations and instructions describing
how to perform them using
[**mysql\_migrate\_keyring**](mysql-migrate-keyring.html "6.6.8 mysql_migrate_keyring — Keyring Key Migration Utility") and other methods, see
[Section 8.4.4.14, “Migrating Keys Between Keyring Keystores”](keyring-key-migration.html "8.4.4.14 Migrating Keys Between Keyring Keystores").

[**mysql\_migrate\_keyring**](mysql-migrate-keyring.html "6.6.8 mysql_migrate_keyring — Keyring Key Migration Utility") supports the following
options, which can be specified on the command line or in the
`[mysql_migrate_keyring]` group of an option
file. For information about option files used by MySQL programs,
see [Section 6.2.2.2, “Using Option Files”](option-files.html "6.2.2.2 Using Option Files").

**Table 6.22 mysql\_migrate\_keyring Options**

<table frame="box" rules="all" summary="Command-line options available for mysql_migrate_keyring."><col style="width: 27%"/><col style="width: 50%"/><col style="width: 11%"/><col style="width: 11%"/><thead><tr><th scope="col">Option Name</th>
<th scope="col">Description</th>
<th scope="col">Introduced</th>
<th scope="col">Deprecated</th>
</tr></thead><tbody><tr><th scope="row"><a class="link" href="mysql-migrate-keyring.html#option_mysql_migrate_keyring_component-dir">--component-dir</a></th>
<td>Directory for keyring components</td>
<td></td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="mysql-migrate-keyring.html#option_mysql_migrate_keyring_defaults-extra-file">--defaults-extra-file</a></th>
<td>Read named option file in addition to usual option files</td>
<td></td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="mysql-migrate-keyring.html#option_mysql_migrate_keyring_defaults-file">--defaults-file</a></th>
<td>Read only named option file</td>
<td></td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="mysql-migrate-keyring.html#option_mysql_migrate_keyring_defaults-group-suffix">--defaults-group-suffix</a></th>
<td>Option group suffix value</td>
<td></td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="mysql-migrate-keyring.html#option_mysql_migrate_keyring_destination-keyring">--destination-keyring</a></th>
<td>Destination keyring component name</td>
<td></td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="mysql-migrate-keyring.html#option_mysql_migrate_keyring_destination-keyring-configuration-dir">--destination-keyring-configuration-dir</a></th>
<td>Destination keyring component configuration directory</td>
<td></td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="mysql-migrate-keyring.html#option_mysql_migrate_keyring_get-server-public-key">--get-server-public-key</a></th>
<td>Request RSA public key from server</td>
<td></td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="mysql-migrate-keyring.html#option_mysql_migrate_keyring_help">--help</a></th>
<td>Display help message and exit</td>
<td></td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="mysql-migrate-keyring.html#option_mysql_migrate_keyring_host">--host</a></th>
<td>Host on which MySQL server is located</td>
<td></td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="mysql-migrate-keyring.html#option_mysql_migrate_keyring_login-path">--login-path</a></th>
<td>Read login path options from .mylogin.cnf</td>
<td></td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="mysql-migrate-keyring.html#option_mysql_migrate_keyring_no-defaults">--no-defaults</a></th>
<td>Read no option files</td>
<td></td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="mysql-migrate-keyring.html#option_mysql_migrate_keyring_online-migration">--online-migration</a></th>
<td>Migration source is an active server</td>
<td></td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="mysql-migrate-keyring.html#option_mysql_migrate_keyring_password">--password</a></th>
<td>Password to use when connecting to server</td>
<td></td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="mysql-migrate-keyring.html#option_mysql_migrate_keyring_port">--port</a></th>
<td>TCP/IP port number for connection</td>
<td></td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="mysql-migrate-keyring.html#option_mysql_migrate_keyring_print-defaults">--print-defaults</a></th>
<td>Print default options</td>
<td></td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="mysql-migrate-keyring.html#option_mysql_migrate_keyring_server-public-key-path">--server-public-key-path</a></th>
<td>Path name to file containing RSA public key</td>
<td></td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="mysql-migrate-keyring.html#option_mysql_migrate_keyring_socket">--socket</a></th>
<td>Unix socket file or Windows named pipe to use</td>
<td></td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="mysql-migrate-keyring.html#option_mysql_migrate_keyring_source-keyring">--source-keyring</a></th>
<td>Source keyring component name</td>
<td></td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="mysql-migrate-keyring.html#option_mysql_migrate_keyring_source-keyring-configuration-dir">--source-keyring-configuration-dir</a></th>
<td>Source keyring component configuration directory</td>
<td></td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="mysql-migrate-keyring.html#option_mysql_migrate_keyring_ssl">--ssl-ca</a></th>
<td>File that contains list of trusted SSL Certificate Authorities</td>
<td></td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="mysql-migrate-keyring.html#option_mysql_migrate_keyring_ssl">--ssl-capath</a></th>
<td>Directory that contains trusted SSL Certificate Authority certificate files</td>
<td></td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="mysql-migrate-keyring.html#option_mysql_migrate_keyring_ssl">--ssl-cert</a></th>
<td>File that contains X.509 certificate</td>
<td></td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="mysql-migrate-keyring.html#option_mysql_migrate_keyring_ssl">--ssl-cipher</a></th>
<td>Permissible ciphers for connection encryption</td>
<td></td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="mysql-migrate-keyring.html#option_mysql_migrate_keyring_ssl">--ssl-crl</a></th>
<td>File that contains certificate revocation lists</td>
<td></td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="mysql-migrate-keyring.html#option_mysql_migrate_keyring_ssl">--ssl-crlpath</a></th>
<td>Directory that contains certificate revocation-list files</td>
<td></td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="mysql-migrate-keyring.html#option_mysql_migrate_keyring_ssl-fips-mode">--ssl-fips-mode</a></th>
<td>Whether to enable FIPS mode on client side</td>
<td></td>
<td>8.0.34</td>
</tr><tr><th scope="row"><a class="link" href="mysql-migrate-keyring.html#option_mysql_migrate_keyring_ssl">--ssl-key</a></th>
<td>File that contains X.509 key</td>
<td></td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="mysql-migrate-keyring.html#option_mysql_migrate_keyring_ssl">--ssl-mode</a></th>
<td>Desired security state of connection to server</td>
<td></td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="mysql-migrate-keyring.html#option_mysql_migrate_keyring_ssl">--ssl-session-data</a></th>
<td>File that contains SSL session data</td>
<td>8.0.29</td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="mysql-migrate-keyring.html#option_mysql_migrate_keyring_ssl">--ssl-session-data-continue-on-failed-reuse</a></th>
<td>Whether to establish connections if session reuse fails</td>
<td>8.0.29</td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="mysql-migrate-keyring.html#option_mysql_migrate_keyring_tls-ciphersuites">--tls-ciphersuites</a></th>
<td>Permissible TLSv1.3 ciphersuites for encrypted connections</td>
<td></td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="mysql-migrate-keyring.html#option_mysql_migrate_keyring_tls-version">--tls-version</a></th>
<td>Permissible TLS protocols for encrypted connections</td>
<td></td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="mysql-migrate-keyring.html#option_mysql_migrate_keyring_user">--user</a></th>
<td>MySQL user name to use when connecting to server</td>
<td></td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="mysql-migrate-keyring.html#option_mysql_migrate_keyring_verbose">--verbose</a></th>
<td>Verbose mode</td>
<td></td>
<td></td>
</tr><tr><th scope="row"><a class="link" href="mysql-migrate-keyring.html#option_mysql_migrate_keyring_version">--version</a></th>
<td>Display version information and exit</td>
<td></td>
<td></td>
</tr></tbody></table>

* [`--help`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_help),
  `-h`

  <table frame="box" rules="all" summary="Properties for help"><col style="width: 30%"/><col style="width: 70%"/><tbody><tr><th>Command-Line Format</th>
<td><code class="literal">--help</code></td>
</tr></tbody></table>

  Display a help message and exit.

* [`--component-dir=dir_name`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_component-dir)

  <table frame="box" rules="all" summary="Properties for component-dir"><col style="width: 30%"/><col style="width: 70%"/><tbody><tr><th>Command-Line Format</th>
<td><code class="literal">--component-dir=dir_name</code></td>
</tr><tr><th>Type</th>
<td>Directory name</td>
</tr></tbody></table>

  The directory where keyring components are located. This is
  typically the value of the
  [`plugin_dir`](server-system-variables.html#sysvar_plugin_dir) system variable
  for the local MySQL server.

  Note

  [`--component-dir`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_component-dir),
  [`--source-keyring`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_source-keyring),
  and
  [`--destination-keyring`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_destination-keyring)
  are mandatory for all keyring migration operations
  performed by [**mysql\_migrate\_keyring**](mysql-migrate-keyring.html "6.6.8 mysql_migrate_keyring — Keyring Key Migration Utility"). In
  addition, the source and destination components must
  differ, and both components must be properly configured so
  that [**mysql\_migrate\_keyring**](mysql-migrate-keyring.html "6.6.8 mysql_migrate_keyring — Keyring Key Migration Utility") can load and
  use them.

* [`--defaults-extra-file=file_name`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_defaults-extra-file)

  <table frame="box" rules="all" summary="Properties for defaults-extra-file"><col style="width: 30%"/><col style="width: 70%"/><tbody><tr><th>Command-Line Format</th>
<td><code class="literal">--defaults-extra-file=file_name</code></td>
</tr><tr><th>Type</th>
<td>File name</td>
</tr></tbody></table>

  Read this option file after the global option file but (on
  Unix) before the user option file. If the file does not
  exist or is otherwise inaccessible, an error occurs. If
  *`file_name`* is not an absolute path
  name, it is interpreted relative to the current directory.

  For additional information about this and other option-file
  options, see [Section 6.2.2.3, “Command-Line Options that Affect Option-File Handling”](option-file-options.html "6.2.2.3 Command-Line Options that Affect Option-File Handling").

* [`--defaults-file=file_name`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_defaults-file)

  <table frame="box" rules="all" summary="Properties for defaults-file"><col style="width: 30%"/><col style="width: 70%"/><tbody><tr><th>Command-Line Format</th>
<td><code class="literal">--defaults-file=file_name</code></td>
</tr><tr><th>Type</th>
<td>File name</td>
</tr></tbody></table>

  Use only the given option file. If the file does not exist
  or is otherwise inaccessible, an error occurs. If
  *`file_name`* is not an absolute path
  name, it is interpreted relative to the current directory.

  Exception: Even with
  [`--defaults-file`](option-file-options.html#option_general_defaults-file), client
  programs read `.mylogin.cnf`.

  For additional information about this and other option-file
  options, see [Section 6.2.2.3, “Command-Line Options that Affect Option-File Handling”](option-file-options.html "6.2.2.3 Command-Line Options that Affect Option-File Handling").

* [`--defaults-group-suffix=str`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_defaults-group-suffix)

  <table frame="box" rules="all" summary="Properties for defaults-group-suffix"><col style="width: 30%"/><col style="width: 70%"/><tbody><tr><th>Command-Line Format</th>
<td><code class="literal">--defaults-group-suffix=str</code></td>
</tr><tr><th>Type</th>
<td>String</td>
</tr></tbody></table>

  Read not only the usual option groups, but also groups with
  the usual names and a suffix of
  *`str`*. For example,
  [**mysql\_migrate\_keyring**](mysql-migrate-keyring.html "6.6.8 mysql_migrate_keyring — Keyring Key Migration Utility") normally reads the
  `[mysql_migrate_keyring]` group. If this
  option is given as
  [`--defaults-group-suffix=_other`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_defaults-group-suffix),
  [**mysql\_migrate\_keyring**](mysql-migrate-keyring.html "6.6.8 mysql_migrate_keyring — Keyring Key Migration Utility") also reads the
  `[mysql_migrate_keyring_other]` group.

  For additional information about this and other option-file
  options, see [Section 6.2.2.3, “Command-Line Options that Affect Option-File Handling”](option-file-options.html "6.2.2.3 Command-Line Options that Affect Option-File Handling").

* [`--destination-keyring=name`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_destination-keyring)

  <table frame="box" rules="all" summary="Properties for destination-keyring"><col style="width: 30%"/><col style="width: 70%"/><tbody><tr><th>Command-Line Format</th>
<td><code class="literal">--destination-keyring=name</code></td>
</tr><tr><th>Type</th>
<td>String</td>
</tr></tbody></table>

  The destination keyring component for key migration. The
  format and interpretation of the option value is the same as
  described for the
  [`--source-keyring`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_source-keyring)
  option.

  Note

  [`--component-dir`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_component-dir),
  [`--source-keyring`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_source-keyring),
  and
  [`--destination-keyring`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_destination-keyring)
  are mandatory for all keyring migration operations
  performed by [**mysql\_migrate\_keyring**](mysql-migrate-keyring.html "6.6.8 mysql_migrate_keyring — Keyring Key Migration Utility"). In
  addition, the source and destination components must
  differ, and both components must be properly configured so
  that [**mysql\_migrate\_keyring**](mysql-migrate-keyring.html "6.6.8 mysql_migrate_keyring — Keyring Key Migration Utility") can load and
  use them.

* [`--destination-keyring-configuration-dir=dir_name`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_destination-keyring-configuration-dir)

  <table frame="box" rules="all" summary="Properties for destination-keyring-configuration-dir"><col style="width: 30%"/><col style="width: 70%"/><tbody><tr><th>Command-Line Format</th>
<td><code class="literal">--destination-keyring-configuration-dir=dir_name</code></td>
</tr><tr><th>Type</th>
<td>Directory name</td>
</tr></tbody></table>

  This option applies only if the destination keyring
  component global configuration file contains
  `"read_local_config": true`, indicating
  that component configuration is contained in the local
  configuration file. The option value specifies the directory
  containing that local file.

* [`--get-server-public-key`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_get-server-public-key)

  <table frame="box" rules="all" summary="Properties for get-server-public-key"><col style="width: 30%"/><col style="width: 70%"/><tbody><tr><th>Command-Line Format</th>
<td><code class="literal">--get-server-public-key</code></td>
</tr><tr><th>Type</th>
<td>Boolean</td>
</tr></tbody></table>

  Request from the server the public key required for RSA key
  pair-based password exchange. This option applies to clients
  that authenticate with the
  `caching_sha2_password` authentication
  plugin. For that plugin, the server does not send the public
  key unless requested. This option is ignored for accounts
  that do not authenticate with that plugin. It is also
  ignored if RSA-based password exchange is not used, as is
  the case when the client connects to the server using a
  secure connection.

  If
  [`--server-public-key-path=file_name`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_server-public-key-path)
  is given and specifies a valid public key file, it takes
  precedence over
  [`--get-server-public-key`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_get-server-public-key).

  For information about the
  `caching_sha2_password` plugin, see
  [Section 8.4.1.2, “Caching SHA-2 Pluggable Authentication”](caching-sha2-pluggable-authentication.html "8.4.1.2 Caching SHA-2 Pluggable Authentication").

* [`--host=host_name`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_host),
  `-h host_name`

  <table frame="box" rules="all" summary="Properties for host"><col style="width: 30%"/><col style="width: 70%"/><tbody><tr><th>Command-Line Format</th>
<td><code class="literal">--host=host_name</code></td>
</tr><tr><th>Type</th>
<td>String</td>
</tr><tr><th>Default Value</th>
<td><code class="literal">localhost</code></td>
</tr></tbody></table>

  The host location of the running server that is currently
  using one of the key migration keystores. Migration always
  occurs on the local host, so the option always specifies a
  value for connecting to a local server, such as
  `localhost`, `127.0.0.1`,
  `::1`, or the local host IP address or host
  name.

* [`--login-path=name`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_login-path)

  <table frame="box" rules="all" summary="Properties for help"><col style="width: 30%"/><col style="width: 70%"/><tbody><tr><th>Command-Line Format</th>
<td><code class="literal">--help</code></td>
</tr></tbody></table>0

  Read options from the named login path in the
  `.mylogin.cnf` login path file. A
  “login path” is an option group containing
  options that specify which MySQL server to connect to and
  which account to authenticate as. To create or modify a
  login path file, use the
  [**mysql\_config\_editor**](mysql-config-editor.html "6.6.7 mysql_config_editor — MySQL Configuration Utility") utility. See
  [Section 6.6.7, “mysql\_config\_editor — MySQL Configuration Utility”](mysql-config-editor.html "6.6.7 mysql_config_editor — MySQL Configuration Utility").

  For additional information about this and other option-file
  options, see [Section 6.2.2.3, “Command-Line Options that Affect Option-File Handling”](option-file-options.html "6.2.2.3 Command-Line Options that Affect Option-File Handling").

* [`--no-defaults`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_no-defaults)

  <table frame="box" rules="all" summary="Properties for help"><col style="width: 30%"/><col style="width: 70%"/><tbody><tr><th>Command-Line Format</th>
<td><code class="literal">--help</code></td>
</tr></tbody></table>1

  Do not read any option files. If program startup fails due
  to reading unknown options from an option file,
  [`--no-defaults`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_no-defaults)
  can be used to prevent them from being read.

  The exception is that the `.mylogin.cnf`
  file is read in all cases, if it exists. This permits
  passwords to be specified in a safer way than on the command
  line even when
  [`--no-defaults`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_no-defaults)
  is used. To create `.mylogin.cnf`, use
  the [**mysql\_config\_editor**](mysql-config-editor.html "6.6.7 mysql_config_editor — MySQL Configuration Utility") utility. See
  [Section 6.6.7, “mysql\_config\_editor — MySQL Configuration Utility”](mysql-config-editor.html "6.6.7 mysql_config_editor — MySQL Configuration Utility").

  For additional information about this and other option-file
  options, see [Section 6.2.2.3, “Command-Line Options that Affect Option-File Handling”](option-file-options.html "6.2.2.3 Command-Line Options that Affect Option-File Handling").

* [`--online-migration`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_online-migration)

  <table frame="box" rules="all" summary="Properties for help"><col style="width: 30%"/><col style="width: 70%"/><tbody><tr><th>Command-Line Format</th>
<td><code class="literal">--help</code></td>
</tr></tbody></table>2

  This option is mandatory when a running server is using the
  keyring. It tells [**mysql\_migrate\_keyring**](mysql-migrate-keyring.html "6.6.8 mysql_migrate_keyring — Keyring Key Migration Utility")
  to perform an online key migration. The option has these
  effects:

  + [**mysql\_migrate\_keyring**](mysql-migrate-keyring.html "6.6.8 mysql_migrate_keyring — Keyring Key Migration Utility") connects to the
    server using any connection options specified; these
    options are otherwise ignored.

  + After [**mysql\_migrate\_keyring**](mysql-migrate-keyring.html "6.6.8 mysql_migrate_keyring — Keyring Key Migration Utility") connects
    to the server, it tells the server to pause keyring
    operations. When key copying is complete,
    [**mysql\_migrate\_keyring**](mysql-migrate-keyring.html "6.6.8 mysql_migrate_keyring — Keyring Key Migration Utility") tells the
    server it can resume keyring operations before
    disconnecting.

* [`--password[=password]`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_password),
  `-p[password]`

  <table frame="box" rules="all" summary="Properties for help"><col style="width: 30%"/><col style="width: 70%"/><tbody><tr><th>Command-Line Format</th>
<td><code class="literal">--help</code></td>
</tr></tbody></table>3

  The password of the MySQL account used for connecting to the
  running server that is currently using one of the key
  migration keystores. The password value is optional. If not
  given, [**mysql\_migrate\_keyring**](mysql-migrate-keyring.html "6.6.8 mysql_migrate_keyring — Keyring Key Migration Utility") prompts for
  one. If given, there must be *no space*
  between
  [`--password=`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_password) or
  `-p` and the password following it. If no
  password option is specified, the default is to send no
  password.

  Specifying a password on the command line should be
  considered insecure. To avoid giving the password on the
  command line, use an option file. See
  [Section 8.1.2.1, “End-User Guidelines for Password Security”](password-security-user.html "8.1.2.1 End-User Guidelines for Password Security").

  To explicitly specify that there is no password and that
  [**mysql\_migrate\_keyring**](mysql-migrate-keyring.html "6.6.8 mysql_migrate_keyring — Keyring Key Migration Utility") should not prompt
  for one, use the
  [`--skip-password`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_password)
  option.

* [`--port=port_num`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_port),
  `-P port_num`

  <table frame="box" rules="all" summary="Properties for help"><col style="width: 30%"/><col style="width: 70%"/><tbody><tr><th>Command-Line Format</th>
<td><code class="literal">--help</code></td>
</tr></tbody></table>4

  For TCP/IP connections, the port number for connecting to
  the running server that is currently using one of the key
  migration keystores.

* [`--print-defaults`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_print-defaults)

  <table frame="box" rules="all" summary="Properties for help"><col style="width: 30%"/><col style="width: 70%"/><tbody><tr><th>Command-Line Format</th>
<td><code class="literal">--help</code></td>
</tr></tbody></table>5

  Print the program name and all options that it gets from
  option files.

  For additional information about this and other option-file
  options, see [Section 6.2.2.3, “Command-Line Options that Affect Option-File Handling”](option-file-options.html "6.2.2.3 Command-Line Options that Affect Option-File Handling").

* [`--server-public-key-path=file_name`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_server-public-key-path)

  <table frame="box" rules="all" summary="Properties for help"><col style="width: 30%"/><col style="width: 70%"/><tbody><tr><th>Command-Line Format</th>
<td><code class="literal">--help</code></td>
</tr></tbody></table>6

  The path name to a file in PEM format containing a
  client-side copy of the public key required by the server
  for RSA key pair-based password exchange. This option
  applies to clients that authenticate with the
  `sha256_password` or
  `caching_sha2_password` authentication
  plugin. This option is ignored for accounts that do not
  authenticate with one of those plugins. It is also ignored
  if RSA-based password exchange is not used, as is the case
  when the client connects to the server using a secure
  connection.

  If
  [`--server-public-key-path=file_name`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_server-public-key-path)
  is given and specifies a valid public key file, it takes
  precedence over
  [`--get-server-public-key`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_get-server-public-key).

  For `sha256_password`, this option applies
  only if MySQL was built using OpenSSL.

  For information about the `sha256_password`
  and `caching_sha2_password` plugins, see
  [Section 8.4.1.3, “SHA-256 Pluggable Authentication”](sha256-pluggable-authentication.html "8.4.1.3 SHA-256 Pluggable Authentication"), and
  [Section 8.4.1.2, “Caching SHA-2 Pluggable Authentication”](caching-sha2-pluggable-authentication.html "8.4.1.2 Caching SHA-2 Pluggable Authentication").

* [`--socket=path`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_socket),
  `-S path`

  <table frame="box" rules="all" summary="Properties for help"><col style="width: 30%"/><col style="width: 70%"/><tbody><tr><th>Command-Line Format</th>
<td><code class="literal">--help</code></td>
</tr></tbody></table>7

  For Unix socket file or Windows named pipe connections, the
  socket file or named pipe for connecting to the running
  server that is currently using one of the key migration
  keystores.

  On Windows, this option applies only if the server was
  started with the [`named_pipe`](server-system-variables.html#sysvar_named_pipe)
  system variable enabled to support named-pipe connections.
  In addition, the user making the connection must be a member
  of the Windows group specified by the
  [`named_pipe_full_access_group`](server-system-variables.html#sysvar_named_pipe_full_access_group)
  system variable.

* [`--source-keyring=name`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_source-keyring)

  <table frame="box" rules="all" summary="Properties for help"><col style="width: 30%"/><col style="width: 70%"/><tbody><tr><th>Command-Line Format</th>
<td><code class="literal">--help</code></td>
</tr></tbody></table>8

  The source keyring component for key migration. This is the
  component library file name specified without any
  platform-specific extension such as `.so`
  or `.dll`. For example, to use the
  component for which the library file is
  `component_keyring_file.so`, specify the
  option as
  [`--source-keyring=component_keyring_file`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_source-keyring).

  Note

  [`--component-dir`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_component-dir),
  [`--source-keyring`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_source-keyring),
  and
  [`--destination-keyring`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_destination-keyring)
  are mandatory for all keyring migration operations
  performed by [**mysql\_migrate\_keyring**](mysql-migrate-keyring.html "6.6.8 mysql_migrate_keyring — Keyring Key Migration Utility"). In
  addition, the source and destination components must
  differ, and both components must be properly configured so
  that [**mysql\_migrate\_keyring**](mysql-migrate-keyring.html "6.6.8 mysql_migrate_keyring — Keyring Key Migration Utility") can load and
  use them.

* [`--source-keyring-configuration-dir=dir_name`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_source-keyring-configuration-dir)

  <table frame="box" rules="all" summary="Properties for help"><col style="width: 30%"/><col style="width: 70%"/><tbody><tr><th>Command-Line Format</th>
<td><code class="literal">--help</code></td>
</tr></tbody></table>9

  This option applies only if the source keyring component
  global configuration file contains
  `"read_local_config": true`, indicating
  that component configuration is contained in the local
  configuration file. The option value specifies the directory
  containing that local file.

* `--ssl*`

  Options that begin with `--ssl` specify
  whether to connect to the server using encryption and
  indicate where to find SSL keys and certificates. See
  [Command Options for Encrypted Connections](connection-options.html#encrypted-connection-options "Command Options for Encrypted Connections").

* [`--ssl-fips-mode={OFF|ON|STRICT}`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_ssl-fips-mode)

  <table frame="box" rules="all" summary="Properties for component-dir"><col style="width: 30%"/><col style="width: 70%"/><tbody><tr><th>Command-Line Format</th>
<td><code class="literal">--component-dir=dir_name</code></td>
</tr><tr><th>Type</th>
<td>Directory name</td>
</tr></tbody></table>0

  Controls whether to enable FIPS mode on the client side. The
  [`--ssl-fips-mode`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_ssl-fips-mode)
  option differs from other
  `--ssl-xxx`
  options in that it is not used to establish encrypted
  connections, but rather to affect which cryptographic
  operations to permit. See [Section 8.8, “FIPS Support”](fips-mode.html "8.8 FIPS Support").

  These
  [`--ssl-fips-mode`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_ssl-fips-mode)
  values are permitted:

  + `OFF`: Disable FIPS mode.
  + `ON`: Enable FIPS mode.
  + `STRICT`: Enable “strict”
    FIPS mode.

  Note

  If the OpenSSL FIPS Object Module is not available, the
  only permitted value for
  [`--ssl-fips-mode`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_ssl-fips-mode)
  is `OFF`. In this case, setting
  [`--ssl-fips-mode`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_ssl-fips-mode)
  to `ON` or `STRICT`
  causes the client to produce a warning at startup and to
  operate in non-FIPS mode.

  As of MySQL 8.0.34, this option is deprecated. Expect it to
  be removed in a future version of MySQL.

* [`--tls-ciphersuites=ciphersuite_list`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_tls-ciphersuites)

  <table frame="box" rules="all" summary="Properties for component-dir"><col style="width: 30%"/><col style="width: 70%"/><tbody><tr><th>Command-Line Format</th>
<td><code class="literal">--component-dir=dir_name</code></td>
</tr><tr><th>Type</th>
<td>Directory name</td>
</tr></tbody></table>1

  The permissible ciphersuites for encrypted connections that
  use TLSv1.3. The value is a list of one or more
  colon-separated ciphersuite names. The ciphersuites that can
  be named for this option depend on the SSL library used to
  compile MySQL. For details, see
  [Section 8.3.2, “Encrypted Connection TLS Protocols and Ciphers”](encrypted-connection-protocols-ciphers.html "8.3.2 Encrypted Connection TLS Protocols and Ciphers").

* [`--tls-version=protocol_list`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_tls-version)

  <table frame="box" rules="all" summary="Properties for component-dir"><col style="width: 30%"/><col style="width: 70%"/><tbody><tr><th>Command-Line Format</th>
<td><code class="literal">--component-dir=dir_name</code></td>
</tr><tr><th>Type</th>
<td>Directory name</td>
</tr></tbody></table>2

  The permissible TLS protocols for encrypted connections. The
  value is a list of one or more comma-separated protocol
  names. The protocols that can be named for this option
  depend on the SSL library used to compile MySQL. For
  details, see
  [Section 8.3.2, “Encrypted Connection TLS Protocols and Ciphers”](encrypted-connection-protocols-ciphers.html "8.3.2 Encrypted Connection TLS Protocols and Ciphers").

* [`--user=user_name`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_user),
  `-u user_name`

  <table frame="box" rules="all" summary="Properties for component-dir"><col style="width: 30%"/><col style="width: 70%"/><tbody><tr><th>Command-Line Format</th>
<td><code class="literal">--component-dir=dir_name</code></td>
</tr><tr><th>Type</th>
<td>Directory name</td>
</tr></tbody></table>3

  The user name of the MySQL account used for connecting to
  the running server that is currently using one of the key
  migration keystores.

* [`--verbose`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_verbose),
  `-v`

  <table frame="box" rules="all" summary="Properties for component-dir"><col style="width: 30%"/><col style="width: 70%"/><tbody><tr><th>Command-Line Format</th>
<td><code class="literal">--component-dir=dir_name</code></td>
</tr><tr><th>Type</th>
<td>Directory name</td>
</tr></tbody></table>4

  Verbose mode. Produce more output about what the program
  does.

* [`--version`](mysql-migrate-keyring.html#option_mysql_migrate_keyring_version),
  `-V`

  <table frame="box" rules="all" summary="Properties for component-dir"><col style="width: 30%"/><col style="width: 70%"/><tbody><tr><th>Command-Line Format</th>
<td><code class="literal">--component-dir=dir_name</code></td>
</tr><tr><th>Type</th>
<td>Directory name</td>
</tr></tbody></table>5

  Display version information and exit.